# banzami

./: .gitignore  BANZA_ARCHITECTURE.md  BANZA_CERTIFICATION.md  BANZA_CONFORMANCE.md  BANZA_GOVERNANCE.md  BANZA_MANIFESTO.md  BANZA_REFERENCE.md  BANZA_ROADMAP.md  BANZA_SECURITY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md
core/: Cargo.toml  README.md
core/crates/banza-acquiring/: Cargo.toml
core/crates/banza-acquiring/src/: engine.rs  lib.rs  provider.rs  repository.rs
core/crates/banza-capabilities/: Cargo.toml
core/crates/banza-capabilities/src/: lib.rs  operator.rs  provider.rs  wallet.rs
core/crates/banza-compliance/: Cargo.toml
core/crates/banza-compliance/src/: engine.rs  lib.rs  repository.rs
core/crates/banza-consumer-wallets/: Cargo.toml
core/crates/banza-consumer-wallets/src/: engine.rs  funding.rs  lib.rs  onboarding.rs  repository.rs  routing.rs  wallet.rs
core/crates/banza-identity/: Cargo.toml
core/crates/banza-identity/src/: engine.rs  identity.rs  lib.rs  repository.rs
core/crates/banza-ledger/: Cargo.toml
core/crates/banza-ledger/src/: account.rs  engine.rs  entry.rs  lib.rs  posting.rs  repository.rs
core/crates/banza-merchants/: Cargo.toml
core/crates/banza-merchants/src/: api_key.rs  engine.rs  lib.rs  merchant.rs  repository.rs
core/crates/banza-notifications/: Cargo.toml
core/crates/banza-payment-links/: Cargo.toml
core/crates/banza-payment-links/src/: engine.rs  lib.rs  payment_link.rs  repository.rs
core/crates/banza-payouts/: Cargo.toml
core/crates/banza-payouts/src/: engine.rs  lib.rs  repository.rs
core/crates/banza-qr/: Cargo.toml
core/crates/banza-qr/src/: engine.rs  lib.rs  qr_code.rs  repository.rs
core/crates/banza-reconciliation/: Cargo.toml
core/crates/banza-reconciliation/src/: engine.rs  lib.rs  repository.rs
core/crates/banza-risk/: Cargo.toml
core/crates/banza-risk/src/: engine.rs  lib.rs
core/crates/banza-routing/: Cargo.toml
core/crates/banza-routing/src/: engine.rs  lib.rs
core/crates/banza-settlement/: Cargo.toml
core/crates/banza-settlement/src/: engine.rs  lib.rs  provider.rs  repository.rs  scheduler.rs
core/crates/banza-transactions/: Cargo.toml
core/crates/banza-transactions/src/: engine.rs  lib.rs  repository.rs  transaction.rs
core/crates/banza-transfers/: Cargo.toml
core/crates/banza-transfers/src/: engine.rs  lib.rs  repository.rs  transfer.rs
core/crates/banza-types/: Cargo.toml
core/crates/banza-types/src/: money.rs
core/crates/banza-wallets/: Cargo.toml
core/crates/banza-wallets/src/: engine.rs  lib.rs  repository.rs  wallet.rs
core/crates/banzami-acquiring/: Cargo.toml
core/crates/banzami-acquiring/src/: engine.rs  lib.rs  provider.rs  repository.rs
core/crates/banzami-capabilities/: Cargo.toml
core/crates/banzami-capabilities/src/: lib.rs  operator.rs  provider.rs  wallet.rs
core/crates/banzami-compliance/: Cargo.toml
core/crates/banzami-compliance/src/: engine.rs  lib.rs  repository.rs
core/crates/banzami-consumer-wallets/: Cargo.toml
core/crates/banzami-consumer-wallets/src/: engine.rs  funding.rs  lib.rs  onboarding.rs  repository.rs  routing.rs  wallet.rs
core/crates/banzami-identity/: Cargo.toml
core/crates/banzami-identity/src/: engine.rs  identity.rs  lib.rs  repository.rs
core/crates/banzami-ledger/: Cargo.toml
core/crates/banzami-ledger/src/: account.rs  engine.rs  entry.rs  lib.rs  posting.rs  repository.rs
core/crates/banzami-merchants/: Cargo.toml
core/crates/banzami-merchants/src/: api_key.rs  engine.rs  lib.rs  merchant.rs  repository.rs
core/crates/banzami-notifications/: Cargo.toml
core/crates/banzami-notifications/src/: lib.rs
core/crates/banzami-payment-links/: Cargo.toml
core/crates/banzami-payment-links/src/: engine.rs  expiry_worker.rs  lib.rs  payment_link.rs  repository.rs
core/crates/banzami-payouts/: Cargo.toml
core/crates/banzami-payouts/src/: engine.rs  lib.rs  repository.rs
core/crates/banzami-qr/: Cargo.toml
core/crates/banzami-qr/src/: engine.rs  expiry_worker.rs  lib.rs  qr_code.rs  repository.rs
core/crates/banzami-reconciliation/: Cargo.toml
core/crates/banzami-reconciliation/src/: balance_checker.rs  engine.rs  lib.rs  repository.rs
core/crates/banzami-risk/: Cargo.toml
core/crates/banzami-risk/src/: engine.rs  lib.rs
core/crates/banzami-routing/: Cargo.toml
core/crates/banzami-routing/src/: engine.rs  lib.rs
core/crates/banzami-settlement/: Cargo.toml
core/crates/banzami-settlement/src/: engine.rs  lib.rs  provider.rs  repository.rs  scheduler.rs
core/crates/banzami-transactions/: Cargo.toml
core/crates/banzami-transactions/src/: engine.rs  lib.rs  repository.rs  transaction.rs
core/crates/banzami-transfers/: Cargo.toml
core/crates/banzami-transfers/src/: engine.rs  lib.rs  repository.rs  transfer.rs
core/crates/banzami-types/: Cargo.toml
core/crates/banzami-types/src/: currency.rs  ids.rs  lib.rs
core/crates/banzami-wallets/: Cargo.toml
core/crates/banzami-wallets/src/: engine.rs  lib.rs  repository.rs  wallet.rs
reference/: Cargo.toml  Dockerfile  docker-compose.yml
reference/demo-wallet/: README.md  index.html
reference/fake-acquirer/: Cargo.toml
reference/fake-acquirer/src/: lib.rs
reference/local-ledger/: Cargo.toml
reference/local-ledger/src/: lib.rs
reference/local-notifications/: Cargo.toml
reference/local-notifications/src/: lib.rs
reference/mock-routing/: Cargo.toml
reference/mock-routing/src/: lib.rs
reference/sandbox-operator/: Cargo.toml
reference/sandbox-operator/src/: events.rs  lib.rs  main.rs  manifest.rs  routes.rs  state.rs
reference/sandbox-operator/tests/: integration.rs
reference/simulated-settlement/: Cargo.toml
reference/simulated-settlement/src/: lib.rs
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/banza/: __init__.py  auth.py  client.py  config.py  exceptions.py  pagination.py  retries.py  signature.py
sdk/python/banza/models/: __init__.py  common.py  dispute.py  (+10 more)
sdk/python/tests/: conftest.py
(+633 files in other folders)
