[workspace]
members = [
    "crates/banza-types",
    "crates/banza-ledger",
    "crates/banza-wallets",
    "crates/banza-transactions",
    "crates/banza-merchants",
    "crates/banza-settlement",
    "crates/banza-routing",
    "crates/banza-reconciliation",
    "crates/banza-risk",
    "crates/banza-compliance",
    "crates/banza-payouts",
    "crates/banza-identity",
    "crates/banza-consumer-wallets",
    "crates/banza-transfers",
    "crates/banza-qr",
    "crates/banza-payment-links",
    "crates/banza-acquiring",
    "crates/banza-notifications",
    "crates/banza-capabilities",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
repository  = "https://github.com/banza-protocol/banza"
authors     = ["BANZA Protocol Contributors"]
description = "Open-source financial infrastructure for programmable instant payments"
keywords    = ["payments", "fintech", "ledger", "wallet", "africa"]
categories  = ["finance"]

# ---------------------------------------------------------------------------
# Shared dependency versions — crates opt-in with { workspace = true }
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Internal crates
banza-types           = { path = "crates/banza-types" }
banza-ledger          = { path = "crates/banza-ledger" }
banza-wallets         = { path = "crates/banza-wallets" }
banza-transactions    = { path = "crates/banza-transactions" }
banza-merchants       = { path = "crates/banza-merchants" }
banza-settlement      = { path = "crates/banza-settlement" }
banza-routing         = { path = "crates/banza-routing" }
banza-risk            = { path = "crates/banza-risk" }
banza-reconciliation  = { path = "crates/banza-reconciliation" }
banza-payouts         = { path = "crates/banza-payouts" }
banza-compliance      = { path = "crates/banza-compliance" }
banza-identity        = { path = "crates/banza-identity" }
banza-consumer-wallets = { path = "crates/banza-consumer-wallets" }
banza-transfers       = { path = "crates/banza-transfers" }
banza-qr              = { path = "crates/banza-qr" }
banza-payment-links   = { path = "crates/banza-payment-links" }
banza-acquiring       = { path = "crates/banza-acquiring" }
banza-notifications   = { path = "crates/banza-notifications" }
banza-capabilities    = { path = "crates/banza-capabilities" }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database — opt-in per crate
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
] }

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2   = "0.10"
hmac   = "0.12"
base64 = { version = "0.22", features = ["alloc"] }
argon2 = { version = "0.5", features = ["alloc"] }
rand   = "0.8"

# HTTP server — for reference sandbox implementation
axum       = "0.7"
tower      = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
