[workspace]
members = [
    "sandbox-operator",
    "fake-acquirer",
    "local-notifications",
    "simulated-settlement",
]
resolver = "2"

[workspace.package]
version  = "0.1.0"
edition  = "2021"
license  = "Apache-2.0"

[workspace.dependencies]
# Banzami kernel crates (path deps — no crates.io publish yet)
banzami-types           = { path = "../core/crates/banzami-types" }
banzami-ledger          = { path = "../core/crates/banzami-ledger" }
banzami-wallets         = { path = "../core/crates/banzami-wallets" }
banzami-transactions    = { path = "../core/crates/banzami-transactions" }
banzami-acquiring       = { path = "../core/crates/banzami-acquiring" }
banzami-routing         = { path = "../core/crates/banzami-routing" }
banzami-settlement      = { path = "../core/crates/banzami-settlement" }
banzami-notifications   = { path = "../core/crates/banzami-notifications" }
banzami-identity        = { path = "../core/crates/banzami-identity" }
banzami-qr              = { path = "../core/crates/banzami-qr" }
banzami-payment-links   = { path = "../core/crates/banzami-payment-links" }
banzami-risk            = { path = "../core/crates/banzami-risk" }
banzami-transfers       = { path = "../core/crates/banzami-transfers" }

# Reference implementations (within this workspace)
fake-acquirer         = { path = "fake-acquirer" }
local-notifications   = { path = "local-notifications" }
simulated-settlement  = { path = "simulated-settlement" }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow    = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum       = "0.7"
tower      = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database — SQLite for local development (no Postgres required)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "chrono",
] }

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto (for HMAC-signed sandbox callbacks)
sha2 = "0.10"
hmac = "0.12"
hex  = "0.4"

# Random
rand = "0.8"
