[workspace]
members = [
    "sandbox-operator",
    "fake-acquirer",
    "local-ledger",
    "local-notifications",
    "mock-routing",
    "simulated-settlement",
]
resolver = "2"

[workspace.package]
version  = "0.1.0"
edition  = "2021"
license  = "Apache-2.0"

[workspace.dependencies]
# BANZA kernel crates (path deps — no crates.io publish yet)
banza-types           = { path = "../core/crates/banza-types" }
banza-ledger          = { path = "../core/crates/banza-ledger" }
banza-wallets         = { path = "../core/crates/banza-wallets" }
banza-transactions    = { path = "../core/crates/banza-transactions" }
banza-acquiring       = { path = "../core/crates/banza-acquiring" }
banza-routing         = { path = "../core/crates/banza-routing" }
banza-settlement      = { path = "../core/crates/banza-settlement" }
banza-notifications   = { path = "../core/crates/banza-notifications" }
banza-identity        = { path = "../core/crates/banza-identity" }
banza-qr              = { path = "../core/crates/banza-qr" }
banza-payment-links   = { path = "../core/crates/banza-payment-links" }
banza-risk            = { path = "../core/crates/banza-risk" }
banza-transfers       = { path = "../core/crates/banza-transfers" }
banza-capabilities    = { path = "../core/crates/banza-capabilities" }

# Reference implementations (within this workspace)
fake-acquirer         = { path = "fake-acquirer" }
local-ledger          = { path = "local-ledger" }
local-notifications   = { path = "local-notifications" }
mock-routing          = { path = "mock-routing" }
simulated-settlement  = { path = "simulated-settlement" }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow    = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum       = "0.7"
tower      = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database — SQLite for local development (no Postgres required)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "chrono",
] }

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto (for HMAC-signed sandbox callbacks)
sha2 = "0.10"
hmac = "0.12"
hex  = "0.4"

# Random
rand = "0.8"

# Streaming
tokio-stream = { version = "0.1", features = ["sync"] }
futures      = "0.3"
