[package]
name        = "fake-acquirer"
description = "Simulated AcquirerProvider for local development — no external calls"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
banza-acquiring = { workspace = true }
banza-types     = { workspace = true }
serde_json        = { workspace = true }
chrono            = { workspace = true }
hmac              = { workspace = true }
sha2              = { workspace = true }
hex               = { workspace = true }
rand              = { workspace = true }
tracing           = { workspace = true }
