[package]
name        = "local-ledger"
description = "SQLite-backed double-entry ledger for local development — no Postgres required"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
banzami-types = { workspace = true }
sqlx          = { workspace = true }
tokio         = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
