[package]
name        = "local-notifications"
description = "Simulated NotificationProvider — stdout and tracing output, no FCM or APNs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
banza-notifications = { workspace = true }
serde_json            = { workspace = true }
tracing               = { workspace = true }
