[package]
name        = "sandbox-operator"
description = "the reference operator reference operator — local development sandbox, no external infra required"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sandbox_operator"
path = "src/lib.rs"

[[bin]]
name = "sandbox-operator"
path = "src/main.rs"

[dependencies]
# BANZA kernel
banza-types        = { workspace = true }
banza-capabilities = { workspace = true }

# Reference implementations
fake-acquirer        = { workspace = true }
local-notifications  = { workspace = true }
simulated-settlement = { workspace = true }

# Infra
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
axum         = { workspace = true }
tower-http   = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
