[package]
name        = "simulated-settlement"
description = "Simulated SettlementExecutionProvider — no real bank transfers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
banzami-settlement = { workspace = true }
banzami-types      = { workspace = true }
tracing            = { workspace = true }
