[package]
name        = "simulated-settlement"
description = "Simulated SettlementExecutionProvider — no real bank transfers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
banza-settlement = { workspace = true }
banza-types      = { workspace = true }
tracing            = { workspace = true }
