[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banza-python"
version = "0.1.0"
description = "Official Python SDK for the Banzami payments platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["banza", "banzami", "payments", "angola", "aoa", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage    = "https://banzami.com"
Repository  = "https://github.com/banza-protocol/sdk-python"
"Bug Tracker" = "https://github.com/banza-protocol/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["banza"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "--cov=banza --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version          = "3.12"
strict                  = true
ignore_missing_imports  = true
