[package]
name        = "banza-compliance"
description = "KYC/KYB, AML screening, sanctions, transaction monitoring"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true
authors.workspace   = true

[dependencies]
banza-types = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }
sqlx          = { workspace = true }
tokio         = { workspace = true }
