[package]
name        = "banza-ledger"
description = "Double-entry ledger engine — the single financial truth"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true
authors.workspace   = true

[dependencies]
banza-types = { workspace = true }
serde         = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
sqlx          = { workspace = true }
tokio         = { workspace = true }

[dev-dependencies]
sqlx  = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
