[package]
name        = "banza-merchants"
description = "Merchant management — registration, status lifecycle, API key issuance and verification"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
banza-types = { workspace = true }
serde         = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
sqlx          = { workspace = true }
tokio         = { workspace = true }
sha2          = { workspace = true }
