[package]
name        = "banza-payouts"
description = "Outbound disbursement orchestration"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true
authors.workspace   = true

[dependencies]
banza-types   = { workspace = true }
banza-ledger  = { workspace = true }
banza-wallets = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
chrono          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }
sqlx            = { workspace = true }
tokio           = { workspace = true }

[dev-dependencies]
sqlx  = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
