[package]
name        = "banza-qr"
description = "QR code generation, signing, and validation for consumer and merchant payments"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
banza-types = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
sqlx          = { workspace = true }
tokio         = { workspace = true }
hmac          = { workspace = true }
sha2          = { workspace = true }
base64        = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
