[package]
name        = "banza-routing"
description = "Payment routing across acquirers and rails"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true
authors.workspace   = true

[dependencies]
banza-types = { workspace = true }
serde         = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
