[package]
name        = "banza-settlement"
description = "Net settlement and clearing logic — batches captured transactions and posts acquirer confirmation to the ledger"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
banza-types  = { workspace = true }
banza-ledger = { workspace = true }
serde          = { workspace = true }
uuid           = { workspace = true }
chrono         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
sqlx           = { workspace = true }
tokio          = { workspace = true }

[dev-dependencies]
banza-wallets = { workspace = true }
sqlx  = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
