[package]
name        = "banza-transactions"
description = "Transaction lifecycle — authorize, capture, reverse, fail with wallet and ledger integration"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
banza-types   = { workspace = true }
banza-wallets = { workspace = true }
serde           = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
sqlx            = { workspace = true }
tokio           = { workspace = true }
