[package]
name        = "banza-types"
description = "Shared financial primitives: Money, Currency, typed IDs"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true
authors.workspace   = true

[dependencies]
serde     = { workspace = true }
uuid      = { workspace = true }
chrono    = { workspace = true }
thiserror = { workspace = true }
