[package]
name        = "banzami-identity"
description = "Consumer identity — human-readable handles, lifecycle management"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
banzami-types = { workspace = true }
serde         = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
sqlx          = { workspace = true }
tokio         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx  = { workspace = true }
