[package]
name        = "banzami-notifications"
description = "Notification provider trait — operators implement delivery (FCM, APNs, WebSocket, stdout)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
