[package]
name        = "banzami-reconciliation"
description = "Reconciliation jobs against external integrations and bank statements"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true
authors.workspace   = true

[dependencies]
banzami-types = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }
sqlx          = { workspace = true }
tokio         = { workspace = true }
